--- a/tribute-page/main.css
+++ b/tribute-page/main.css
@@ -4,44 +4,144 @@
   padding: 0;
 }
 
+/* ******************
+General
+****************** */
+
 body {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
   width: 100%;
   height: 100vh;
+  background: url(images/apple.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-h1  {
-  margin: 20px;
+a  {
+  text-decoration: none;
+  color: #fff;
 }
 
-#main {
-  margin: 100px auto;
-  text-align: center;
-  padding: 50px 50px;
+ul {
+  list-style-type: none;
+  display: flex;
+}
+
+ul li {
+  font-size: 16px;
+  font-weight: 400;
+  padding: 0 20px;
+  margin: 25px 0;
+  cursor: pointer;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+}
+
+
+/* ******************
+Main 
+****************** */
+main {
+  font-family: 'Teko', sans-serif;
+  margin: 0 auto;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  height: 80vh;
+}
+
+/* ******************
+Biography
+****************** */
+.bio {
+  margin-top: 100px;
+  height: 100vh;
+  width: 100%;
+}
+
+#img-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0;
+}
+
+#img-div p {
+  margin-bottom: 20px;
+}
+
+#img-div a {
+  color: #000;
 }
 
 #img-caption {
-  margin: 50px auto;
+  text-align: center;
   width: 375px;
+  line-height: 25px;
 }
 
-#tribute-info {
-  margin: 10px 0;
-  letter-spacing: 2px;
-  line-height: 20px;
+h3 {
+  margin: 20px 0;
 }
 
-/* Tablet and Desktop */
-@media(min-width: 768px) {
-  .wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 720px;
-    margin: 0 auto;
+button {
+  padding: 8px 10px;
+  cursor: pointer;
+  letter-spacing: 3px;
+  border: solid 2px #1f1f1f;
+  background: transparent;
+  color: #1f1f1f;
+  border-radius: 8px;
+}
+
+button:hover {
+  background: #1f1f1f;
+  color: #fff;
+}
+
+/* ******************
+Footer
+****************** */
+#footer {
+  position: relative;
+  clear: both;
+  width: 100%;
+  padding: 10px 10px 0px 10px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+/* ******************
+Tablet and Desktop
+****************** */
+@media (min-width: 768px) {
+  /* ******************
+  Biography
+  ****************** */
+  .bio {
+    height: 60vh;
+    padding: 50px;
   }
 
   #img-div {
-    margin-right: 150px;
+    flex-direction: row;
+  }
+
+  #img-caption {
+    margin-left: 100px;
+  }
+
+  #img-caption {
+    width: 700px;
   }
 }
