--- a/form/main.css
+++ b/form/main.css
@@ -129,6 +129,20 @@ input[type=email] {
 }
 
 /* ********************* 
+Footer
+********************* */
+
+footer {
+  color:rgba(0, 0, 0, 0.3);
+  clear: both;
+  width: 100%;
+  padding: 10px 10px 0px 10px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+/* ********************* 
 Media Query: 
 Desktop
 ********************* */
