--- a/form/main.css
+++ b/form/main.css
@@ -116,7 +116,7 @@ input[type=submit] {
   margin-top: 20px;
   padding: 15px 20px;
   text-transform: uppercase;
-  width: 260px;
+  width: 300px;
 }
 
 input[type=text],
@@ -190,9 +190,26 @@ Desktop
     overflow-y: scroll; 
   }
 
+  .scrollbar::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+  }
+
+  .scrollbar::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+  }
+
     /* inputs */
   input[type=submit] {
-    width: 425px;
+    width: 500px;
   }
 
   input[type=text],
