--- a/form/main.css
+++ b/form/main.css
@@ -128,6 +128,10 @@ input[type=email] {
   border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
+textarea {
+  width: 260px;
+}
+
 /* ********************* 
 Footer
 ********************* */
