--- a/chess/main.css
+++ b/chess/main.css
@@ -29,3 +29,16 @@ body {
   background: grey;
 }
 
+@media(max-width: 767px) {
+  .board {
+    width: 240px;
+    height: 240px;
+  }
+
+  .cell {
+    height: 30px;
+    width: 30px;
+    font-size: 20px;
+  }
+}
+
