--- a/landing-page/main.css
+++ b/landing-page/main.css
@@ -386,3 +386,90 @@ input[type=submit] {
   padding: 0 10px;
   cursor: pointer;
 }
+
+
+/* *****************
+Media Query: 
+Tablet
+***************** */
+@media(min-width: 768px) {
+  /* *****************
+  Navigation
+  ***************** */
+  #nav-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2rem 3rem;
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    z-index: 100;
+  }
+
+  .nav-menu {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
+    left: 0;
+    top: 0;
+    flex-direction: row;
+    background-color:  hsl(200,100%,62%);
+    width: 100%;
+    height: 60px;
+    border-radius: 0;
+    text-align: center;
+    transition: none;
+    box-shadow: none;
+  }
+
+  .nav-menu .nav-link {
+    display: inline-block;
+    padding: 20px;
+    cursor: pointer;
+  }
+
+  .nav-link a {
+    color:hsl(0, 0%, 100%);
+  }
+
+
+  .bar {
+    display: none;
+  }
+
+  /* *****************
+  Header
+  ***************** */
+  #header {
+    background: url(images/desktop/image-header.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+  }
+
+  .header-banner img {
+    margin-top: 50px;
+  }
+
+  /* *****************
+  Main: 
+  White Box
+  ***************** */
+  .white-box {
+    width: 500px;
+  }
+
+  .white-box h2 {
+    font-size: 2rem;
+  }
+
+  .white-box p {
+    font-size: 1.3rem;
+    line-height: 40px;
+  }
+
+}
