tablet view done

--- a/landing-page/main.css
+++ b/landing-page/main.css
@@ -454,22 +454,103 @@ Tablet
   .header-banner img {
     margin-top: 50px;
   }
-
+  
   /* *****************
   Main: 
   White Box
   ***************** */
   .white-box {
-    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
   }
 
-  .white-box h2 {
-    font-size: 2rem;
+  /* *****************
+  Main: 
+  Upper Row
+  ***************** */
+  .upper-row {
+    display: flex;
+    width: 100%;
   }
 
-  .white-box p {
-    font-size: 1.3rem;
-    line-height: 40px;
+  /* *****************
+  Main: 
+  Mid Row
+  ***************** */
+  .mid-row {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+  }
+
+  .box img {
+    width: 50%;
+  }
+
+  /* *****************
+  Main: 
+  Lower Row & Upper Row
+  ***************** */
+  .lower-row {
+    display: flex;
+    font-family: 'Fraunces', sans-serif;
+    font-weight: 900;
+    padding: 0;
+    width: 100%;
+    height: 80vh;;
+  }
+
+  .upper-box,
+  .lower-box {
+    height: 70vh;
+    width: 50%;
+  }
+
+  /* *****************
+  Main: 
+  Testimonials
+  ***************** */
+  .testi {
+    margin-bottom: 70px;
+    padding: 0 20px;
+  }
+
+  .testi-wrapper {
+    display: flex;
+  }
+
+  .testi-box img {
+    height: 60px;
+    width: 60px;
+  }
+  
+  .testi-box p {
+    font-size: 0.9rem;
+    padding: 15px;
+  }
+
+  /* *****************
+  Main: 
+  Gallery
+  ***************** */
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    grid-template-rows: 1fr;
+  }
+
+  .img {
+    background-position: 50% top;
+    background-repeat: none;
+    background-size: cover;
+    height: 50vh;
+    width: 100%;
   }
 
 }
