--- a/landing-page/main.css
+++ b/landing-page/main.css
@@ -1,668 +1,527 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
-/* *****************
-General
-***************** */
-/* colors */
-.red {
-  color: hsl(7, 99%, 70%);
-}
-
-.yellow {
-  color: hsl(51, 100%, 48%);
-}
-
-.cyan {
-  color: hsl(167, 40%, 24%);
-}
-
-.dark-cyan {
-  color: hsl(168, 34%, 41%);
-}
-
-.dark-blue {
-  color: hsl(198, 62%, 26%);
-}
-
-.dark-blue2 {
-  color: hsl(212, 27%, 19%);
-}
-
-.dark-gray {
-  color: hsl(213, 9%, 39%);
-}
-
-.dark-gray2 {
-  color: hsl(232, 10%, 55%);
-}
-
-.gray-blue {
-  color: hsl(210, 4%, 67%);
-}
-
-.white {
-  color: hsl(0, 0%, 100%);
-}
-
+html,
 body {
-  font-family: 'Barlow', sans-serif;
-  font-size: 18px;
-  height: 100vh;
-  width: 100%;
+  font-family: 'Open-sans', sans-serif;
+  line-height: 1.5;
+  overflow-x: hidden;
 }
 
 a {
   text-decoration: none;
+  color: #fff;
 }
 
-ul li  {
+ul li {
   list-style: none;
 }
 
-/* .wrapper {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 300px;
-} */
-
-/* *****************
-Header
-***************** */
-#header {
-  background: url(images/mobile/image-header.jpg);
-  background-position: 50% top;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
-  width: 100%;
+h1 {
+  font-family: 'Bebas Neue', cursive;
+  font-weight: 300;
+  font-size: 60px;
+  line-height: 1.2;
 }
 
-/* *****************
+/* ******************
+Header: 
+logo
+****************** */
+.logo {
+  font-family: 'Exo', sans-serif;
+  font-size: 2.5rem;
+  text-transform: lowercase;
+}
+
+/* ******************
+Header: 
 Navigation
-***************** */
-#nav-bar {
-  background-color: hsl(200,100%,62%);
+****************** */
+.nav-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 0.5rem;
-  position: fixed;
+  padding: 40px 100px;
   width: 100%;
-  height: 60px;
-  z-index: 100;
+  z-index: 10;
 }
 
 .nav-menu {
-  position: fixed;
-  left: -100%;
-  top: 5rem;
-  flex-direction: column;
-  background-color:hsl(0, 0%, 100%);
-  width: 100%;
-  border-radius: 10px;
-  text-align: center;
-  transition: 0.3s;
-  box-shadow: 0 10px 27px rgba(0,0,0, 0.05);
-}
-
-.nav-menu.active {
   display: flex;
-  justify-content: center;
   align-items: center;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  width: 300px;
 }
 
 .nav-link {
-  margin: 2.5rem 0;
-  color:rgba(0,0,0, 0.05);
+  padding: 0 25px;
 }
 
-.nav-link a {
-  font-family: 'Fraunces', sans-serif;
-  font-weight: 700;
-  color:hsl(213, 9%, 39%);
+.nav-link a:hover {
+  color: #555;
 }
 
-.hamburger {
-  cursor: pointer;
-}
-
-.hamburger.active .bar:nth-child(2) {
-  opacity: 0;
-}
-
-.hamburger.active .bar:nth-child(1) {
-  transform: translateY(8px) rotate(45deg);
-}
-
-.hamburger.active .bar:nth-child(3) {
-  transform: translateY(-8px) rotate(-45deg);
-}
-
-.bar {
-  display: block;
-  width: 25px;
-  height: 3px;
-  margin: 5px auto;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  background-color:hsl(0, 0%, 100%);
-}
-
-/* *****************
-Header banner
-***************** */
-.header-banner {
-  font-family: 'Fraunces', sans-serif;
-  letter-spacing: 8px;
-  text-transform: uppercase;
+/* ******************
+Header Content
+****************** */
+.header {
+  color: #fff;
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+  padding: 0 20px;
 }
 
-.header-banner h1 {
-  padding-top: 200px;
+.header-content {
+  z-index: 10;
+}
+
+.header-content h1 {
+  font-size: 8rem;
+}
+
+.header-content p {
+  max-width: 400px;
+  margin: 0 auto;
+  line-height: 25px;
+  margin-bottom: 10px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  background: rgb(197, 164, 140);
+  border: 1px #fff solid;
+  border-radius: 5px;
+  margin-top: 25px;
+}
+
+.btn:hover {
+  transform: scale(0.98);
+}
+
+/* ******************
+Video
+****************** */
+.video-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.video-wrap video {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.8;
+}
+
+.video-wrap:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: hsl(212, 27%, 19%);
+  mix-blend-mode: overlay;
+}
+
+/* ******************
+Socials
+****************** */
+.social {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+.social li a img {
+  filter: invert(1);
+  transform: scale(0.5);
+  transition: 0.5s;
+  padding: 10px;
+}
+
+.social li a img:hover {
+  transform: scale(0.5) translateY(-15px);
+}
+
+.fb-icon {
+  width: 55px;
+  height: 65px;
 }
 
 
 
-/* *****************
-Main: 
-White Box
-***************** */
-.box img {
+
+/* ******************
+About Section
+****************** */
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #e0ded8;
+  padding: 40px;
+  text-align: left;
+  width: 100%;
+  height: 50vh;
+}
+
+.about-image {
+  margin-top: 60px;
+}
+
+.about-image img {
   width: 100%;
   height: auto;
-}
-
-.white-box {
-  font-family: 'Fraunces', sans-serif;
-  height: 55vh;
-  margin: 0 auto;
-  padding: 50px 0;
-  width: 300px;
-  text-align: center;
-}
-
-.white-box h2 {
-  color:hsl(212, 27%, 19%);
-  font-weight: 900;
-}
-
-.white-box p {
-  color:hsl(213, 9%, 39%);
-  font-family: 'Barlow', sans-serif;
-  font-size: 1rem;
-  line-height: 25px;
-  margin: 30px 0;
-}
-
-/* *****************
-Main: 
-Lower Row
-***************** */
-.lower-row {
-  font-family: 'Fraunces', sans-serif;
-  font-weight: 900;
-  margin: 0 auto;
-  padding: 50px 0;
-  text-align: center;
-}
-
-.lower-row h2 {
-  margin-bottom: -20px;
-  font-weight: 900;
-}
-
-.lower-row p {
-  font-family: 'Barlow', sans-serif;
-  font-size: 1rem;
-  line-height: 25px;
-  margin: 50px 10px;
-}
-
-.upper-box,
-.lower-box {
-  background-position: 50% top;
-  background-repeat: none;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  height: 100vh;
-}
-
-.upper-box {
-  background-image: url(images/mobile/image-graphic-design.jpg);
-  color:hsl(167, 40%, 24%);
-}
-
-.lower-box {
-  background-image: url(images/mobile/image-photography.jpg);
-  color:hsl(198, 62%, 26%);
-}
-
-/* *****************
-Main: 
-Testimonials
-***************** */
-.testi {
-  text-align: center;
-}
-
-
-.testi h5 {
-  color:hsl(210, 4%, 67%);
-  font-family: 'Fraunces', sans-serif;
-  font-weight: 900;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  margin-bottom: 50px;
-}
-
-.testi-box img {
-  height: 70px;
-  width: 70px;
+  max-width: 300px;
   border-radius: 50%;
-  margin: 10px 0 20px 0;
+  box-shadow: 60px -30px #c5a48c;
 }
 
-.testi-box p {
-  color:hsl(213, 9%, 39%);
-  font-family: 'Barlow', sans-serif;
-  font-size: 1.1rem;
-  padding: 15px;
-  line-height: 25px;
+.about-content {
+  margin-right: 100px;
 }
 
-.testi-name {
+.about h1 {
+  color: #5d4b44;
+  margin-bottom: 20px;
+}
+
+.about p {
+  font-size: 1.2rem;
+  max-width: 490px;
+  margin: auto;
+}
+
+/* ******************
+Services Section
+****************** */
+.services {
+  color: #fff;
+  background: #332c29;
+  padding: 50px 100px;
   display: flex;
-  flex-direction: column;
-  font-family: 'Fraunces', sans-serif;
-  font-weight: 900;
-  margin-top: 20px;
-}
-
-.position {
-  color:hsl(232, 10%, 55%);
-  font-family: 'Barlow', sans-serif;
-  font-size: 0.9rem;
-  padding: 10px 0 50px 0;
-}
-
-/* *****************
-Main: 
-Gallery
-***************** */
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px,2fr));
-  grid-template-rows: 2fr;
-}
-
-.img {
-  background-position: 50% top;
-  background-repeat: none;
-  background-size: cover;
-  height: 50vh;
-  width: 100%;
-}
-
-/* Image 1 */
-.image-1 {
-  background-image: url(images/mobile/image-gallery-milkbottles.jpg);
-}
-
-/* Image 2 */
-.image-2 {
-  background-image: url(images/mobile/image-gallery-orange.jpg);
-}
-
-/* Image 3 */
-.image-3 {
-  background-image: url(images/mobile/image-gallery-cone.jpg);
-}
-
-/* Image 4 */
-.image-4 {
-  background-image: url(images/mobile/image-gallery-sugar-cubes.jpg);
-}
-
-/* *****************
-Footer
-***************** */
-#footer {
-  font-family: 'Fraunces', sans-serif;
-  font-weight: 900;
-  background-color:hsl(168, 34%, 41%);
-  color:hsl(167, 40%, 24%);
-  display: flex;
-  flex-direction: column;
+  justify-self: center;
   align-items: center;
   width: 100%;
-  height: 50vh;
+  height: 70vh;
+}
+
+.services-content {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-#footer h2 {
+.services-content h2 {
+  font-family: 'Playfair Display',serif;
+  font-size: 3rem;
+  font-weight: 200;
+  letter-spacing: 8px;
+}
+
+.services-content h3 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.25rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 10px;
+}
+
+.services-content p {
+  margin: 28px 0;
+  width: 500px;
+}
+
+.services-content a{
+  background: #111;
+  font-weight: 400;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+
+.services-content a:hover {
+  letter-spacing: 8px;
+}
+
+.services-img {
+  display: flex;
+  justify-content: center;
   margin: 0 auto;
-  padding: 30px 0;
+  width: 50%;
 }
 
-#footer img {
-  color:hsl(168, 34%, 41%);
-  cursor: pointer;
-  margin: 50px 0 20px 0;
+.services-img img {
+  width: 100%;
+  height: auto;
+  max-width: 700px;
+  box-shadow: -30px -30px #5d4b44;
 }
 
-/* *****************
-Form
-***************** */
+/* ******************
+Contact Section
+****************** */
+.contact {
+  background: #e0ded8;
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 100px;
+}
+
+.contact-content h2 {
+  font-family: 'Playfair Display', serif;
+  font-size: 2.5rem;
+  font-weight: 200;
+}
+
+.contact-content {
+  width: 30%;
+  margin-right: 100px;
+}
+
+.contact-content p {
+  margin: 28px 0;
+  width: 500px;
+  line-height: 30px;
+}
+
+.contact-image img {
+  width: 100%;
+  height: auto;
+  max-width: 600px;
+  box-shadow: #f6b165 0px 0px 0px 3px,
+  #d58d57 0px 0px 0px 6px,
+  #b36c49 0px 0px 0px 9px;
+}
+
 input[type=email] {
-  border-radius: 8px;
-  border: 0;
-  margin: 15px 0;
-  outline: none;
   padding: 10px 40px;
+  border: 1px solid #111;
+  border-width: thin;
+  outline: none;
 }
 
 input[type=submit] {
-  font-family: 'Fraunces', sans-serif;
-  font-weight: 900;
-  padding: 10px 15px;
-  border: 0;
+  padding: 7.9px 40px;
+  background: #111;
+  border: none;
   outline: none;
-  background-color: #f0d264;;
-  color:hsl(212, 27%, 19%);
-  border-radius: 6px;
-  box-shadow:0px 4px 0px #D1B757;
-}
-
-.socials img {
-  padding: 0 10px;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
   cursor: pointer;
 }
 
+/* ******************
+Social Media
+****************** */
+.contact .social {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  z-index: 10;
+}
 
-/* *****************
+.contact .social li a img {
+  filter: invert(0);
+  transform: scale(0.5);
+  transition: 0.5s;
+  padding: 10px;
+}
+
+.contact .social li a img:hover {
+  transform: scale(0.5) translateY(-15px);
+}
+
+.contact .fb-icon {
+  width: 55px;
+  height: 65px;
+}
+
+footer {
+  background: #e0ded8;
+  color: rgba(0, 0, 0, 0.3);
+  clear: both;
+  width: 100%;
+  padding: 10px 10px 0px 10px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+
+/* ******************
 Media Query: 
-Tablet
-***************** */
-@media(min-width: 768px) {
-  /* *****************
+Mobile 
+****************** */
+@media (max-width: 768px) {
+
+  /* ******************
   Navigation
-  ***************** */
-  #nav-bar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 2rem 3rem;
-    position: fixed;
-    width: 100%;
-    height: 60px;
-    z-index: 100;
-  }
-
-  .nav-menu {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    position: relative;
-    left: 0;
-    top: 0;
-    flex-direction: row;
-    background-color:  hsl(200,100%,62%);
-    width: 100%;
-    height: 60px;
-    border-radius: 0;
-    text-align: center;
-    transition: none;
-    box-shadow: none;
-  }
-
-  .nav-menu .nav-link {
-    display: inline-block;
+  ****************** */
+  .nav-bar {
     padding: 20px;
-    cursor: pointer;
   }
 
-  .nav-link a {
-    color:hsl(0, 0%, 100%);
+  .nav-link {
+    padding: 0 10px;
+    font-size: 0.8rem;
   }
 
-
-  .bar {
-    display: none;
+  .logo {
+    font-size: 2rem;
   }
 
-  /* *****************
-  Header
-  ***************** */
-  #header {
-    background: url(images/desktop/image-header.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100%;
-  }
+  /* ******************
+  About Section
+  ****************** */
+    .about {
+      flex-direction: column-reverse;
+      text-align: center;
+      height: 100vh;
+    }
 
-  .header-banner img {
-    margin-top: 50px;
-  }
-  
-  /* *****************
-  Main: 
-  White Box
-  ***************** */
-  .white-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    text-align: center;
-    margin: 0 auto;
-    padding: 0;
-  }
+    .about-image {
+      margin-top: 30px;
+    }
 
-  .white-box p {
-    padding: 0 20px;
-  }
+    .about-image img {
+      width: 100%;
+      height: auto;
+      max-width: 300px;
+      border-radius: 50%;
+      box-shadow: 20px -30px #c5a48c;
+    }
 
-  /* *****************
-  Main: 
-  Upper Row
-  ***************** */
-  .upper-row {
-    display: flex;
-    width: 100%;
-  }
+    .about-content {
+      margin-right: 0;
+    }
 
-  /* *****************
-  Main: 
-  Mid Row
-  ***************** */
-  .mid-row {
-    display: flex;
-    flex-direction: row-reverse;
-    width: 100%;
-  }
+    .about h1 {
+      font-size: 2.5rem;
+      margin: 20px auto;
+    }
 
-  .box img {
-    width: 50%;
-  }
+    .about p {
+      font-size: 1rem;
+      max-width: 490px;
+    }
 
-  /* *****************
-  Main: 
-  Lower Row & Upper Row
-  ***************** */
-  .lower-row {
-    display: flex;
-    font-family: 'Fraunces', sans-serif;
-    font-weight: 900;
-    padding: 0;
-    width: 100%;
-    height: 80vh;;
-  }
+    /* ******************
+    Services Section
+    ****************** */
+    .services {
+      padding: 30px;
+      flex-direction: column;
+      height: 90vh;
+    }
 
-  .upper-box,
-  .lower-box {
-    height: 70vh;
-    width: 50%;
-  }
+    .services-content {
+      height: 80vh;
+    }
 
-  /* *****************
-  Upper and Lower Box
-  ***************** */
-  .upper-box {
-    background-image: url(images/desktop/image-graphic-design.jpg);
-    color:hsl(167, 40%, 24%);
-  }
-  
-  .lower-box {
-    background-image: url(images/desktop/image-photography.jpg);
-    color:hsl(198, 62%, 26%);
-  }
+    .services-content h2 {
+      font-size: 2.5rem;
+      width: 300px;
+    }
 
-  /* *****************
-  Main: 
-  Testimonials
-  ***************** */
-  .testi {
-    margin-bottom: 70px;
-    padding: 0 20px;
-  }
+    .services-content p {
+      width: 100%;
+      max-width: 490px;
+      min-width: 300px;
+    }
 
-  .testi-wrapper {
-    display: flex;
-  }
+    .services-content a {
+      width: 250px;
+    }
 
-  .testi-box img {
-    height: 60px;
-    width: 60px;
-  }
-  
-  .testi-box p {
-    font-size: 0.9rem;
-    padding: 15px;
-  }
+    .services-img {
+      margin: 25px auto;
+      width: 100%;
+      height: auto;
+    }
 
-  /* *****************
-  Main: 
-  Gallery
-  ***************** */
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
-    grid-template-rows: 1fr;
-  }
+    .services-img img {
+      max-width: 300px;
+      box-shadow: -10px -20px #5d4b44;
+    }
 
-  .img {
-    background-position: 50% top;
-    background-repeat: none;
-    background-size: cover;
-    height: 50vh;
-    width: 100%;
-  }
+    /* ******************
+    Contact Section
+    ****************** */
+    .contact {
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column-reverse;
+      padding: 40px;
+      text-align: center;
+    }
 
-}
+    .contact-content h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.5rem;
+      font-weight: 200;
+    }
 
+    .contact-content {
+      width: 100%;
+      margin: 20px auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 
-/* *****************
-Media Query: 
-Tablet
-***************** */
-@media(min-width: 1024px) {
-  /* *****************
-  Main: 
-  White Box
-  ***************** */
-  .white-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    text-align: left;
-    margin: 0 auto;
-    padding: 0;
-  }
+    .contact-content p {
+      margin: 28px 0;
+      font-size: 1rem;
+      line-height: 30px;
+      width: 100%;
+      max-width: 490px;
+      min-width: 300px;
+    }
 
-  .white-box h2 {
-    text-align: left;
-    font-size: 2.5rem;
-    margin-top: 200px;
-  }
+    .contact-image img {
+      max-width: 400px;
+    }
 
-  .white-box p {
-    width: 500px;
-    text-align: left;
-  }
+    input[type=email] {
+      padding: 10px 30px;
+      border: 1px solid #111;
+      border-width: thin;
+      outline: none;
+    }
 
-  /* *****************
-  Upper & Lower Box
-  ***************** */
-  .upper-box p,
-  .lower-box p {
-    width: 400px;
-  }
-
-  /* *****************
-  Gallery
-  ***************** */
-  /* Image 1 */
-  .image-1 {
-    background-image: url(images/desktop/image-gallery-milkbottles.jpg);
-  }
-
-  /* Image 2 */
-  .image-2 {
-    background-image: url(images/desktop/image-gallery-orange.jpg);
-  }
-
-  /* Image 3 */
-  .image-3 {
-    background-image: url(images/desktop/image-gallery-cone.jpg);
-  }
-
-  /* Image 4 */
-  .image-4 {
-    background-image: url(images/desktop/image-gallery-sugarcubes.jpg);
-  }
-
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px,1fr));
-    grid-template-rows: 1fr;
-  }
-  
-}
-
-/* *****************
-Media Query: 
-Lapotp (1440px)
-***************** */
-@media(min-width: 1440px) {
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px,4fr));
-    grid-template-rows: 1fr;
-  }
-
-  /* *****************
-  Main: 
-  Testimonials
-  ***************** */
-  .testi-box p {
-    font-size: 0.9rem;
-    padding: 15px;
-  }
+    input[type=submit] {
+      margin-top: 20px;
+    }
 }
