--- a/landing-page/main.css
+++ b/landing-page/main.css
@@ -34,7 +34,7 @@ logo
 .logo {
   font-family: 'Exo', sans-serif;
   font-size: 2.5rem;
-  text-transform: lowercase;
+  text-transform: uppercase;
 }
 
 /* ******************
