--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -2,4 +2,32 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  display: flex;
+  font-family: sans-serif;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+/* *****************
+Game Title
+***************** */
+.game-title {
+  text-align: center;
+}
+
+/* *****************
+Container  
+***************** */
+.container {
+  background: rgb(92, 105, 122);
+  width: 500px;
+  height: 500px;
+  border: none;
+  border-radius: 8px;
 }
