--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  background: rgb(250, 80, 80);
   display: flex;
   font-family: sans-serif;
   justify-content: center;
@@ -15,19 +16,65 @@ body {
 }
 
 /* *****************
+Select Box
+***************** */
+.select-section {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  padding: 20px 25px 25px;
+  border-radius: 5px;
+}
+
+.select-section header {
+  font-size: 23px;
+  font-weight: 600;
+  padding-bottom: 1px solid #ccc;
+}
+
+.select-section .title {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 20px 0;
+}
+
+.select-section .options {
+  display: flex;
+  width: 100%;
+}
+
+.options button {
+  width: 100%;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 0;
+  border: none;
+  outline: none;
+  background: rgb(252, 108, 84);
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.options button:hover {
+  transform: scale(0.9);
+}
+
+.options button.playerX {
+  margin-right: 5px;
+}
+
+.options button.playerO {
+  margin-left: 5px;
+}
+
+
+/* *****************
 Game Title
 ***************** */
 .game-title {
   text-align: center;
-}
-
-/* *****************
-Container  
-***************** */
-.container {
-  background: rgb(92, 105, 122);
-  width: 500px;
-  height: 500px;
-  border: none;
-  border-radius: 8px;
 }
