added background color on cell when clicked

--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -1,105 +1,51 @@
 * {
-  margin: 0;
+  box-sizing: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  margin: 0;
 }
 
 body {
-  background: #f98125;
   display: flex;
-  font-family: sans-serif;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.5rem;
   height: 100vh;
-}
-
-/* *****************
-Select Box
-***************** */
-.select-section {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #fff;
-  padding: 20px 25px 25px;
-  border-radius: 5px;
-  display: none;
-}
-
-.select-section header {
-  font-size: 23px;
-  font-weight: 600;
-  border: 1px solid #ccc;
-}
-
-.select-section .title {
-  font-size: 18px;
-  font-weight: 500;
-  margin: 20px 0;
-}
-
-.select-section .options {
-  display: flex;
   width: 100%;
 }
 
-.options button {
-  width: 100%;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 8px 0;
-  border: none;
-  outline: none;
-  background: #fb9b50;
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-.options button:hover {
-  transform: scale(0.9);
-}
-
-.options button.playerX {
-  margin-right: 5px;
-}
-
-.options button.playerO {
-  margin-left: 5px;
-}
-
-
-/* *****************
-Game Title
-***************** */
-.game-title {
-  text-align: center;
-}
-
-/* *****************
-Main Container: 
-Upper,Middle,Lower Row
-***************** */
-.container section {
+/* **************
+Game Container 
+************** */
+.game-container section {
   display: flex;
 }
 
-.container section span {
+.game-container span {
   display: block;
-  margin: 3px;
-  height: 80px;
-  width: 80px;
-  background: #fff;
-  border-radius: 5px;
+  margin: 8px;
+  height: 150px;
+  width: 150px;
+  background: #add8e6;
+  border-radius: 10px;
   cursor: pointer;
 }
 
-.container .cell {
+/* **************
+Cell
+************** */
+.game-container .cell {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.cross,
+.circle {
+  color: #fff;
+}
+
+.cell:hover {
+  background: #333;
 }
