--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -22,6 +22,67 @@ body {
 }
 
 /* **************
+Select Box
+************** */
+.select-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  padding: 20px 25px 25px;
+  border-radius: 5px;
+  max-width: 300px;
+  width: 100%;
+  z-index: 100;
+} 
+
+.select-box header {
+  font-size: 3rem;
+  font-weight: 600px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.select-box .title {
+  font-size:1.5rem;
+  font-weight: 500;
+  margin: 20px 0;
+}
+
+.select-box .options {
+  display: flex;
+  width: 100%;
+}
+
+.options button {
+  width: 100%;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 0;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.options button.playerX {
+  margin-right: 5px;
+  background: #fe5c5c;
+}
+
+.options button.playerO {
+  margin-left: 5px;
+  background: #ffbf00;
+}
+
+.options button:hover {
+  transform: scale(0.96);
+}
+
+
+/* **************
 Game Container 
 ************** */
 .game-container section {
@@ -52,8 +113,6 @@ Cell
   pointer-events: none;
 }
 
-
-
 .cross,
 .circle {
   color: #fff;
@@ -63,6 +122,28 @@ Cell
   background: #333;
 }
 
+.cross {
+  width: 32px;
+  height: 32px;
+  position: relative;
+}
+
+.cross:before,
+.cross:after {
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #fff;
+}
+
+.cross:before {
+  transform: rotate(45deg);
+}
+
+.cross:after {
+  transform: rotate(-45deg);
+}
 /* **************
 Buttons 
 ************** */
