added result box html and css

--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -189,8 +189,36 @@ Play Board
   z-index: 2;
 }
 
+/* **************
+Result Box
+************** */
+.result-box {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100vh;
+  max-height: 100px;
+  width: 100%;
+  max-width: 210px;
+  text-align: center;
+  overflow: hidden;
+  opacity: 0;
+}
 
+.result-box .won-text {
+  font-size: 3rem;
+  font-weight: 500;
+  display: flex;
+}
 
+.no-click {
+  pointer-events: none;
+  cursor: none;
+}
 
 /* **************
 Buttons 
