--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -82,7 +82,8 @@ Select Box
   background: #ffbf00;
 }
 
-.options button:hover {
+.options button:hover,
+.result-box .btn-close button:hover {
   transform: scale(0.96);
 }
 
@@ -201,18 +202,39 @@ Result Box
   left: 50%;
   transform: translate(-50%, -50%);
   height: 100vh;
-  max-height: 100px;
+  max-height: 150px;
   width: 100%;
   max-width: 210px;
   text-align: center;
   overflow: hidden;
-  opacity: 0;
+  /* opacity: 0; */
 }
 
 .result-box .won-text {
   font-size: 3rem;
   font-weight: 500;
   display: flex;
+}
+
+.result-box .btn-close {
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+}
+
+.result-box .btn-close button {
+  font-family: sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 8px 20px;
+  border: none;
+  outline: none;
+  background: #add8e6;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  letter-spacing: 5px;
 }
 
 .no-click {
