--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -37,10 +37,16 @@ Select Box
   width: 300px;
   height: 100vh;
   z-index: 100;
-  pointer-events: none;
-  opacity: 0;
+  /* opacity: 0; */
   overflow: hidden;
+  transition: all 0.3s ease;
 } 
+
+.select-box.hide {
+  opacity: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(0.9);
+}
 
 .select-box header {
   font-size: 3rem;
@@ -90,6 +96,16 @@ Select Box
 /* **************
 Game Container 
 ************** */
+.game-container {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.game-container.show {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 .game-container section {
   display: flex;
 }
@@ -135,7 +151,15 @@ Play Board
   top: 85%;
   left: 50%;
   width: 150px;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(-0.9);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.play-board.show {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translate(-50%, -50%) scale(1);
 }
 
 .play-board .details {
@@ -207,7 +231,7 @@ Result Box
   max-width: 210px;
   text-align: center;
   overflow: hidden;
-  /* opacity: 0; */
+  opacity: 0;
 }
 
 .result-box .won-text {
