--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -298,6 +298,11 @@ Buttons
   pointer-events: none;
 }
 
+.buttons.show {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 .buttons span {
   margin: 0 30px;
 }
