--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -37,7 +37,6 @@ Select Box
   width: 300px;
   height: 100vh;
   z-index: 100;
-  /* opacity: 0; */
   overflow: hidden;
   transition: all 0.3s ease;
 } 
@@ -110,6 +109,7 @@ Game Container
 .game-container {
   opacity: 0;
   pointer-events: none;
+  transition: all 0.3s ease;
 }
 
 .game-container.show {
@@ -296,6 +296,7 @@ Buttons
   margin-top: 20px;
   opacity: 0;
   pointer-events: none;
+  transition: all 0.5s ease-in;
 }
 
 .buttons.show {
