added winning combination hightlights

--- a/tic-tac-toe/main.css
+++ b/tic-tac-toe/main.css
@@ -159,6 +159,10 @@ Cell
   cursor: default;
 }
 
+.highlight {
+  background-color: #022d36;
+}
+
 /* **************
 Play Board 
 ************** */
